--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,19 @@
+.holder{
+	display:flex;
+	justify-content:space-between;
+	align-items:center;
+	flex-wrap:wrap;
+}
 
-/* Your CSS Code here. */
+.item{
+	width:100px;
+	height:100px;
+	font-size:50px;
+}
+.green{
+	background-color:green;
+}.red{
+	background-color:red;
+}.blue{
+	background-color:blue;
+}
